Opened 12 years ago

Closed 12 years ago

#3822 closed defect (fixed)

Assertion failure when reencoding ass in mkv

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avformat
Version: git-master Keywords: mkv crash abort regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

The sample from ticket #3120 causes an assertion failure on reencoding since 925f7980

$ ffmpeg -i 3120-ssa-2-srt-fails-001.mkv out.mkv
ffmpeg version N-65142-gd76675d Copyright (c) 2000-2014 the FFmpeg developers
  built on Aug  1 2014 02:13:52 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 94.100 / 52. 94.100
  libavcodec     55. 71.100 / 55. 71.100
  libavformat    55. 50.100 / 55. 50.100
  libavdevice    55. 13.102 / 55. 13.102
  libavfilter     4. 11.102 /  4. 11.102
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 19.100 /  0. 19.100
  libpostproc    52.  3.100 / 52.  3.100
[matroska,webm @ 0x27c3c60] Unknown entry 0x437E
    Last message repeated 1 times
Input #0, matroska,webm, from '3120-ssa-2-srt-fails-001.mkv':
  Metadata:
    encoder         : libebml v1.2.2 + libmatroska v1.3.0
    creation_time   : 2013-11-05 16:43:47
  Duration: 00:01:44.94, bitrate: 160 kb/s
    Chapter #0.0: start 0.000000, end 97.918375
    Metadata:
      title           : Intro
    Chapter #0.1: start 97.918375, end 104.940000
    Metadata:
      title           : OP
    Stream #0:0(eng): Subtitle: ssa (default)
    Stream #0:1: Attachment: ttf
    Metadata:
      filename        : Comfortaa-Regular.ttf
      mimetype        : application/x-truetype-font
    Stream #0:2: Attachment: ttf
    Metadata:
      filename        : LT.ttf
      mimetype        : application/x-truetype-font
    Stream #0:3: Attachment: ttf
    Metadata:
      filename        : LTFinnegan_MediumItalic.ttf
      mimetype        : application/x-truetype-font
    Stream #0:4: Attachment: ttf
    Metadata:
      filename        : Cavalier.ttf
      mimetype        : application/x-truetype-font
    Stream #0:5: Attachment: ttf
    Metadata:
      filename        : Comfortaa-Bold.ttf
      mimetype        : application/x-truetype-font
    Stream #0:6: Attachment: ttf
    Metadata:
      filename        : DSFetteKanzlei.ttf
      mimetype        : application/x-truetype-font
    Stream #0:7: Attachment: ttf
    Metadata:
      filename        : KaiserzeitGotisch.ttf
      mimetype        : application/x-truetype-font
    Stream #0:8: Attachment: ttf
    Metadata:
      filename        : Mothproof_Script.ttf
      mimetype        : application/x-truetype-font
Output #0, matroska, to 'out.mkv':
  Metadata:
    encoder         : Lavf55.50.100
    Chapter #0.0: start 0.000000, end 97.918375
    Metadata:
      title           : Intro
    Chapter #0.1: start 97.918375, end 104.940000
    Metadata:
      title           : OP
    Stream #0:0(eng): Subtitle: ssa (default)
    Metadata:
      encoder         : Lavc55.71.100 ssa
Stream mapping:
  Stream #0:0 -> #0:0 (ssa (native) -> ssa (native))
Press [q] to stop, [?] for help
Assertion bytes >= needed_bytes failed at libavformat/matroskaenc.c:195
Aborted

Change History (1)

comment:1 by Michael Niedermayer, 12 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.